// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateGame functionality and rendering CreateGame renders correctly with default props 1`] = `
.c0 {
  width: 30rem;
  margin: 0 auto;
  padding: 2rem;
  border-radius: 2px;
  position: relative;
  background-color: currentColor;
  color: #1982C4;
}

.c0:before {
  z-index: -1;
  position: absolute;
  content: '';
  bottom: 1.2rem;
  left: 0.5rem;
  width: 50%;
  top: 80%;
  max-width: 300px;
  background: #777;
  box-shadow: 0 1.5rem 1rem rgba(0,0,0,0.4);
  -webkit-transform: rotate(-3deg);
  -ms-transform: rotate(-3deg);
  transform: rotate(-3deg);
}

.c1 {
  background-color: #f7f9f9;
  padding: 1.2rem;
  text-align: center;
  border-radius: 2px;
  font-family: 'Oswald',sans-serif;
  font-size: 4rem;
  color: inherit;
  font-weight: 400;
  text-transform: uppercase;
}

.c2 {
  background-color: #f7f9f9;
  padding: 1.5rem;
  text-align: center;
  border-radius: 2px;
  font-size: 4rem;
  margin-top: 1.5rem;
}

.c14 {
  width: 47%;
  padding: 0.6rem 0rem;
  border: none;
  border-radius: 2px;
  background-color: #f7f9f9;
  font-size: 2.3rem;
  font-family: 'Oswald',sans-serif;
  text-transform: uppercase;
  color: #1982C4;
}

.c14:hover {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
}

.c14:active {
  -webkit-filter: brightness(0.8);
  filter: brightness(0.8);
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c14:focus {
  border: none;
  outline: solid 2px #8AC926;
}

.c14:disabled {
  -webkit-filter: brightness(0.6);
  filter: brightness(0.6);
  cursor: wait;
}

.c15 {
  width: 47%;
  padding: 0.6rem 0rem;
  border: none;
  border-radius: 2px;
  background-color: #f7f9f9;
  font-size: 2.3rem;
  font-family: 'Oswald',sans-serif;
  text-transform: uppercase;
  color: #1982C4;
  color: #f7f9f9;
  background-color: #8AC926;
}

.c15:hover {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
}

.c15:active {
  -webkit-filter: brightness(0.8);
  filter: brightness(0.8);
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c15:focus {
  border: none;
  outline: solid 2px #8AC926;
}

.c15:disabled {
  -webkit-filter: brightness(0.6);
  filter: brightness(0.6);
  cursor: wait;
}

.c15:focus {
  outline: solid 2px #f7f9f9;
}

.c13 {
  margin-top: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c3 {
  text-align: left;
  font-size: 2.2rem;
  font-family: 'Oswald',sans-serif;
  color: #333333;
}

.c4 {
  margin-bottom: 1.5rem;
  padding-left: 0;
  padding-right: 0;
}

.c7 {
  margin-bottom: 1.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

.c8 {
  font-size: 2rem;
  font-weight: 500;
  text-align: center;
}

.c8::after {
  display: block;
  content: "";
  width: 80%;
  height: 1.5px;
  background-color: #ebebeb;
  margin: 0.8rem auto 1rem auto;
}

.c9 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  width: 100%;
  padding: 1rem;
  border: none;
  background-color: #ebebeb;
  font-size: 2.2rem;
  border-radius: 2%;
  text-align: center;
  text-transform: uppercase;
}

.c6::-webkit-input-placeholder {
  font-size: 1.8rem;
  font-style: italic;
}

.c6::-moz-placeholder {
  font-size: 1.8rem;
  font-style: italic;
}

.c6:-ms-input-placeholder {
  font-size: 1.8rem;
  font-style: italic;
}

.c6::placeholder {
  font-size: 1.8rem;
  font-style: italic;
}

.c6:focus {
  outline: none;
  border: solid 1px #1982C4;
}

.c10 {
  margin-right: 1rem;
}

.c12 {
  padding: 1rem;
  width: 100%;
  margin: .8rem 0rem 1rem 0;
  background-color: #ebebeb;
  font-size: 1.5rem;
  border: none;
}

.c12:focus {
  outline: none;
  border: solid 1px #1982C4;
}

.c11 {
  font-size: 1.6rem;
  display: inline-block;
}

.c5 {
  font-size: 1.6rem;
  display: inline-block;
  font-size: 1.8;
  width: 100%;
  margin-bottom: 0.8rem;
  text-align: center;
  font-weight: 500;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    New Game
  </div>
  <div
    className="c2"
  >
    <form
      action="#"
      className="c3"
      id="createGameForm"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="c4"
      >
        <label
          className="c5"
          htmlFor="name"
        >
          Enter Your Name
        </label>
        <input
          className="c6"
          id="name"
          maxLength={20}
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder=""
          tabIndex="1"
          type="text"
          value=""
        />
      </div>
      <div
        className="c7"
      >
        <p
          className="c8"
        >
          End Game Method
        </p>
        <div
          className="c9"
        >
          <input
            checked={true}
            className="c10"
            id="turns"
            name="endGameMethod"
            onBlur={[Function]}
            onChange={[Function]}
            tabIndex="3"
            type="radio"
            value="turns"
          />
          <label
            className="c11"
            htmlFor="turns"
          >
            Turns per Person
          </label>
        </div>
        <select
          className="c12"
          disabled={false}
          name="turnsValue"
          onBlur={[Function]}
          onChange={[Function]}
          tabIndex="4"
          value={2}
        >
          <option
            value={1}
          >
            1 Turn
          </option>
          <option
            value={2}
          >
            2 Turns
          </option>
          <option
            value={3}
          >
            3 Turns
          </option>
          <option
            value={4}
          >
            4 Turns
          </option>
          <option
            value={5}
          >
            5 Turns
          </option>
        </select>
        <div
          className="c9"
        >
          <input
            checked={false}
            className="c10"
            id="time"
            name="endGameMethod"
            onBlur={[Function]}
            onChange={[Function]}
            tabIndex="5"
            type="radio"
            value="time"
          />
          <label
            className="c11"
            htmlFor="time"
          >
            Timer
          </label>
        </div>
        <select
          className="c12"
          disabled={true}
          name="timeValue"
          onBlur={[Function]}
          onChange={[Function]}
          tabIndex="6"
          value={60}
        >
          <option
            value={30}
          >
            30 minutes
          </option>
          <option
            value={60}
          >
            60 minutes
          </option>
          <option
            value={90}
          >
            90 minutes
          </option>
        </select>
      </div>
      <div
        className="c7"
      >
        <p
          className="c8"
        >
          Skipping Penalty
        </p>
        <div
          className="c9"
        >
          <input
            checked={true}
            className="c10"
            id="none"
            name="skipPenalty"
            onBlur={[Function]}
            onChange={[Function]}
            tabIndex="7"
            type="radio"
            value="none"
          />
          <label
            className="c11"
            htmlFor="none"
          >
            None
          </label>
        </div>
        <div
          className="c9"
        >
          <input
            checked={false}
            className="c10"
            id="halfPoint"
            name="skipPenalty"
            onBlur={[Function]}
            onChange={[Function]}
            type="radio"
            value="halfPoint"
          />
          <label
            className="c11"
            htmlFor="halfPoint"
          >
            1/2 a Point
          </label>
        </div>
        <div
          className="c9"
        >
          <input
            checked={false}
            className="c10"
            id="point"
            name="skipPenalty"
            onBlur={[Function]}
            onChange={[Function]}
            type="radio"
            value="point"
          />
          <label
            className="c11"
            htmlFor="point"
          >
            1 Point
          </label>
        </div>
      </div>
    </form>
  </div>
  <div
    className="c13"
  >
    <button
      className="c14"
      onClick={[Function]}
    >
      Back
    </button>
    <button
      className="c15"
      disabled={false}
      form="createGameForm"
      type="submit"
    >
      Submit
    </button>
  </div>
</div>
`;

exports[`CreateGame functionality and rendering CreateGame renders correctly with error props true 1`] = `
.c0 {
  width: 30rem;
  margin: 0 auto;
  padding: 2rem;
  border-radius: 2px;
  position: relative;
  background-color: currentColor;
  color: #1982C4;
}

.c0:before {
  z-index: -1;
  position: absolute;
  content: '';
  bottom: 1.2rem;
  left: 0.5rem;
  width: 50%;
  top: 80%;
  max-width: 300px;
  background: #777;
  box-shadow: 0 1.5rem 1rem rgba(0,0,0,0.4);
  -webkit-transform: rotate(-3deg);
  -ms-transform: rotate(-3deg);
  transform: rotate(-3deg);
}

.c1 {
  background-color: #f7f9f9;
  padding: 1.2rem;
  text-align: center;
  border-radius: 2px;
  font-family: 'Oswald',sans-serif;
  font-size: 4rem;
  color: inherit;
  font-weight: 400;
  text-transform: uppercase;
}

.c2 {
  background-color: #f7f9f9;
  padding: 1.5rem;
  text-align: center;
  border-radius: 2px;
  font-size: 4rem;
  margin-top: 1.5rem;
}

.c15 {
  width: 47%;
  padding: 0.6rem 0rem;
  border: none;
  border-radius: 2px;
  background-color: #f7f9f9;
  font-size: 2.3rem;
  font-family: 'Oswald',sans-serif;
  text-transform: uppercase;
  color: #1982C4;
}

.c15:hover {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
}

.c15:active {
  -webkit-filter: brightness(0.8);
  filter: brightness(0.8);
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c15:focus {
  border: none;
  outline: solid 2px #8AC926;
}

.c15:disabled {
  -webkit-filter: brightness(0.6);
  filter: brightness(0.6);
  cursor: wait;
}

.c16 {
  width: 47%;
  padding: 0.6rem 0rem;
  border: none;
  border-radius: 2px;
  background-color: #f7f9f9;
  font-size: 2.3rem;
  font-family: 'Oswald',sans-serif;
  text-transform: uppercase;
  color: #1982C4;
  color: #f7f9f9;
  background-color: #8AC926;
}

.c16:hover {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
}

.c16:active {
  -webkit-filter: brightness(0.8);
  filter: brightness(0.8);
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c16:focus {
  border: none;
  outline: solid 2px #8AC926;
}

.c16:disabled {
  -webkit-filter: brightness(0.6);
  filter: brightness(0.6);
  cursor: wait;
}

.c16:focus {
  outline: solid 2px #f7f9f9;
}

.c14 {
  margin-top: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c3 {
  text-align: left;
  font-size: 2.2rem;
  font-family: 'Oswald',sans-serif;
  color: #333333;
}

.c4 {
  margin-bottom: 1.5rem;
  padding-left: 0;
  padding-right: 0;
}

.c7 {
  margin-bottom: 1.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

.c8 {
  font-size: 2rem;
  font-weight: 500;
  text-align: center;
}

.c8::after {
  display: block;
  content: "";
  width: 80%;
  height: 1.5px;
  background-color: #ebebeb;
  margin: 0.8rem auto 1rem auto;
}

.c9 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  width: 100%;
  padding: 1rem;
  border: none;
  background-color: #ebebeb;
  font-size: 2.2rem;
  border-radius: 2%;
  text-align: center;
  text-transform: uppercase;
}

.c6::-webkit-input-placeholder {
  font-size: 1.8rem;
  font-style: italic;
}

.c6::-moz-placeholder {
  font-size: 1.8rem;
  font-style: italic;
}

.c6:-ms-input-placeholder {
  font-size: 1.8rem;
  font-style: italic;
}

.c6::placeholder {
  font-size: 1.8rem;
  font-style: italic;
}

.c6:focus {
  outline: none;
  border: solid 1px #1982C4;
}

.c10 {
  margin-right: 1rem;
}

.c12 {
  padding: 1rem;
  width: 100%;
  margin: .8rem 0rem 1rem 0;
  background-color: #ebebeb;
  font-size: 1.5rem;
  border: none;
}

.c12:focus {
  outline: none;
  border: solid 1px #1982C4;
}

.c11 {
  font-size: 1.6rem;
  display: inline-block;
}

.c5 {
  font-size: 1.6rem;
  display: inline-block;
  font-size: 1.8;
  width: 100%;
  margin-bottom: 0.8rem;
  text-align: center;
  font-weight: 500;
}

.c13 {
  font-size: 1.5rem;
  font-style: italic;
  color: red;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    New Game
  </div>
  <div
    className="c2"
  >
    <form
      action="#"
      className="c3"
      id="createGameForm"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="c4"
      >
        <label
          className="c5"
          htmlFor="name"
        >
          Enter Your Name
        </label>
        <input
          className="c6"
          id="name"
          maxLength={20}
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder=""
          tabIndex="1"
          type="text"
          value=""
        />
      </div>
      <div
        className="c7"
      >
        <p
          className="c8"
        >
          End Game Method
        </p>
        <div
          className="c9"
        >
          <input
            checked={true}
            className="c10"
            id="turns"
            name="endGameMethod"
            onBlur={[Function]}
            onChange={[Function]}
            tabIndex="3"
            type="radio"
            value="turns"
          />
          <label
            className="c11"
            htmlFor="turns"
          >
            Turns per Person
          </label>
        </div>
        <select
          className="c12"
          disabled={false}
          name="turnsValue"
          onBlur={[Function]}
          onChange={[Function]}
          tabIndex="4"
          value={2}
        >
          <option
            value={1}
          >
            1 Turn
          </option>
          <option
            value={2}
          >
            2 Turns
          </option>
          <option
            value={3}
          >
            3 Turns
          </option>
          <option
            value={4}
          >
            4 Turns
          </option>
          <option
            value={5}
          >
            5 Turns
          </option>
        </select>
        <div
          className="c9"
        >
          <input
            checked={false}
            className="c10"
            id="time"
            name="endGameMethod"
            onBlur={[Function]}
            onChange={[Function]}
            tabIndex="5"
            type="radio"
            value="time"
          />
          <label
            className="c11"
            htmlFor="time"
          >
            Timer
          </label>
        </div>
        <select
          className="c12"
          disabled={true}
          name="timeValue"
          onBlur={[Function]}
          onChange={[Function]}
          tabIndex="6"
          value={60}
        >
          <option
            value={30}
          >
            30 minutes
          </option>
          <option
            value={60}
          >
            60 minutes
          </option>
          <option
            value={90}
          >
            90 minutes
          </option>
        </select>
      </div>
      <div
        className="c7"
      >
        <p
          className="c8"
        >
          Skipping Penalty
        </p>
        <div
          className="c9"
        >
          <input
            checked={true}
            className="c10"
            id="none"
            name="skipPenalty"
            onBlur={[Function]}
            onChange={[Function]}
            tabIndex="7"
            type="radio"
            value="none"
          />
          <label
            className="c11"
            htmlFor="none"
          >
            None
          </label>
        </div>
        <div
          className="c9"
        >
          <input
            checked={false}
            className="c10"
            id="halfPoint"
            name="skipPenalty"
            onBlur={[Function]}
            onChange={[Function]}
            type="radio"
            value="halfPoint"
          />
          <label
            className="c11"
            htmlFor="halfPoint"
          >
            1/2 a Point
          </label>
        </div>
        <div
          className="c9"
        >
          <input
            checked={false}
            className="c10"
            id="point"
            name="skipPenalty"
            onBlur={[Function]}
            onChange={[Function]}
            type="radio"
            value="point"
          />
          <label
            className="c11"
            htmlFor="point"
          >
            1 Point
          </label>
        </div>
      </div>
    </form>
    <p
      className="c13"
    >
      There was an error creating game.
    </p>
  </div>
  <div
    className="c14"
  >
    <button
      className="c15"
      onClick={[Function]}
    >
      Back
    </button>
    <button
      className="c16"
      disabled={false}
      form="createGameForm"
      type="submit"
    >
      Submit
    </button>
  </div>
</div>
`;

exports[`CreateGame functionality and rendering CreateGame renders correctly with isPending props true 1`] = `
.c0 {
  width: 30rem;
  margin: 0 auto;
  padding: 2rem;
  border-radius: 2px;
  position: relative;
  background-color: currentColor;
  color: #1982C4;
}

.c0:before {
  z-index: -1;
  position: absolute;
  content: '';
  bottom: 1.2rem;
  left: 0.5rem;
  width: 50%;
  top: 80%;
  max-width: 300px;
  background: #777;
  box-shadow: 0 1.5rem 1rem rgba(0,0,0,0.4);
  -webkit-transform: rotate(-3deg);
  -ms-transform: rotate(-3deg);
  transform: rotate(-3deg);
}

.c1 {
  background-color: #f7f9f9;
  padding: 1.2rem;
  text-align: center;
  border-radius: 2px;
  font-family: 'Oswald',sans-serif;
  font-size: 4rem;
  color: inherit;
  font-weight: 400;
  text-transform: uppercase;
}

.c2 {
  background-color: #f7f9f9;
  padding: 1.5rem;
  text-align: center;
  border-radius: 2px;
  font-size: 4rem;
  margin-top: 1.5rem;
}

.c15 {
  width: 47%;
  padding: 0.6rem 0rem;
  border: none;
  border-radius: 2px;
  background-color: #f7f9f9;
  font-size: 2.3rem;
  font-family: 'Oswald',sans-serif;
  text-transform: uppercase;
  color: #1982C4;
}

.c15:hover {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
}

.c15:active {
  -webkit-filter: brightness(0.8);
  filter: brightness(0.8);
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c15:focus {
  border: none;
  outline: solid 2px #8AC926;
}

.c15:disabled {
  -webkit-filter: brightness(0.6);
  filter: brightness(0.6);
  cursor: wait;
}

.c16 {
  width: 47%;
  padding: 0.6rem 0rem;
  border: none;
  border-radius: 2px;
  background-color: #f7f9f9;
  font-size: 2.3rem;
  font-family: 'Oswald',sans-serif;
  text-transform: uppercase;
  color: #1982C4;
  color: #f7f9f9;
  background-color: #8AC926;
}

.c16:hover {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
}

.c16:active {
  -webkit-filter: brightness(0.8);
  filter: brightness(0.8);
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c16:focus {
  border: none;
  outline: solid 2px #8AC926;
}

.c16:disabled {
  -webkit-filter: brightness(0.6);
  filter: brightness(0.6);
  cursor: wait;
}

.c16:focus {
  outline: solid 2px #f7f9f9;
}

.c14 {
  margin-top: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c3 {
  text-align: left;
  font-size: 2.2rem;
  font-family: 'Oswald',sans-serif;
  color: #333333;
}

.c4 {
  margin-bottom: 1.5rem;
  padding-left: 0;
  padding-right: 0;
}

.c7 {
  margin-bottom: 1.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

.c8 {
  font-size: 2rem;
  font-weight: 500;
  text-align: center;
}

.c8::after {
  display: block;
  content: "";
  width: 80%;
  height: 1.5px;
  background-color: #ebebeb;
  margin: 0.8rem auto 1rem auto;
}

.c9 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  width: 100%;
  padding: 1rem;
  border: none;
  background-color: #ebebeb;
  font-size: 2.2rem;
  border-radius: 2%;
  text-align: center;
  text-transform: uppercase;
}

.c6::-webkit-input-placeholder {
  font-size: 1.8rem;
  font-style: italic;
}

.c6::-moz-placeholder {
  font-size: 1.8rem;
  font-style: italic;
}

.c6:-ms-input-placeholder {
  font-size: 1.8rem;
  font-style: italic;
}

.c6::placeholder {
  font-size: 1.8rem;
  font-style: italic;
}

.c6:focus {
  outline: none;
  border: solid 1px #1982C4;
}

.c10 {
  margin-right: 1rem;
}

.c12 {
  padding: 1rem;
  width: 100%;
  margin: .8rem 0rem 1rem 0;
  background-color: #ebebeb;
  font-size: 1.5rem;
  border: none;
}

.c12:focus {
  outline: none;
  border: solid 1px #1982C4;
}

.c11 {
  font-size: 1.6rem;
  display: inline-block;
}

.c5 {
  font-size: 1.6rem;
  display: inline-block;
  font-size: 1.8;
  width: 100%;
  margin-bottom: 0.8rem;
  text-align: center;
  font-weight: 500;
}

.c13 {
  font-size: 1.5rem;
  font-style: italic;
  color: #1982C4;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    New Game
  </div>
  <div
    className="c2"
  >
    <form
      action="#"
      className="c3"
      id="createGameForm"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="c4"
      >
        <label
          className="c5"
          htmlFor="name"
        >
          Enter Your Name
        </label>
        <input
          className="c6"
          id="name"
          maxLength={20}
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder=""
          tabIndex="1"
          type="text"
          value=""
        />
      </div>
      <div
        className="c7"
      >
        <p
          className="c8"
        >
          End Game Method
        </p>
        <div
          className="c9"
        >
          <input
            checked={true}
            className="c10"
            id="turns"
            name="endGameMethod"
            onBlur={[Function]}
            onChange={[Function]}
            tabIndex="3"
            type="radio"
            value="turns"
          />
          <label
            className="c11"
            htmlFor="turns"
          >
            Turns per Person
          </label>
        </div>
        <select
          className="c12"
          disabled={false}
          name="turnsValue"
          onBlur={[Function]}
          onChange={[Function]}
          tabIndex="4"
          value={2}
        >
          <option
            value={1}
          >
            1 Turn
          </option>
          <option
            value={2}
          >
            2 Turns
          </option>
          <option
            value={3}
          >
            3 Turns
          </option>
          <option
            value={4}
          >
            4 Turns
          </option>
          <option
            value={5}
          >
            5 Turns
          </option>
        </select>
        <div
          className="c9"
        >
          <input
            checked={false}
            className="c10"
            id="time"
            name="endGameMethod"
            onBlur={[Function]}
            onChange={[Function]}
            tabIndex="5"
            type="radio"
            value="time"
          />
          <label
            className="c11"
            htmlFor="time"
          >
            Timer
          </label>
        </div>
        <select
          className="c12"
          disabled={true}
          name="timeValue"
          onBlur={[Function]}
          onChange={[Function]}
          tabIndex="6"
          value={60}
        >
          <option
            value={30}
          >
            30 minutes
          </option>
          <option
            value={60}
          >
            60 minutes
          </option>
          <option
            value={90}
          >
            90 minutes
          </option>
        </select>
      </div>
      <div
        className="c7"
      >
        <p
          className="c8"
        >
          Skipping Penalty
        </p>
        <div
          className="c9"
        >
          <input
            checked={true}
            className="c10"
            id="none"
            name="skipPenalty"
            onBlur={[Function]}
            onChange={[Function]}
            tabIndex="7"
            type="radio"
            value="none"
          />
          <label
            className="c11"
            htmlFor="none"
          >
            None
          </label>
        </div>
        <div
          className="c9"
        >
          <input
            checked={false}
            className="c10"
            id="halfPoint"
            name="skipPenalty"
            onBlur={[Function]}
            onChange={[Function]}
            type="radio"
            value="halfPoint"
          />
          <label
            className="c11"
            htmlFor="halfPoint"
          >
            1/2 a Point
          </label>
        </div>
        <div
          className="c9"
        >
          <input
            checked={false}
            className="c10"
            id="point"
            name="skipPenalty"
            onBlur={[Function]}
            onChange={[Function]}
            type="radio"
            value="point"
          />
          <label
            className="c11"
            htmlFor="point"
          >
            1 Point
          </label>
        </div>
      </div>
    </form>
    <p
      className="c13"
    >
      Creating new game
    </p>
  </div>
  <div
    className="c14"
  >
    <button
      className="c15"
      onClick={[Function]}
    >
      Back
    </button>
    <button
      className="c16"
      disabled={true}
      form="createGameForm"
      type="submit"
    >
      Submit
    </button>
  </div>
</div>
`;
